add_library(CommandLib
        ICommand.h
        HelpCommand.cpp HelpCommand.h
        CommandController.cpp CommandController.h
        ConvertCommand.cpp ConvertCommand.h
        ExitCommand.cpp ExitCommand.h ReadCommand.cpp ReadCommand.h SortCommand.cpp SortCommand.h DepartmentSorter.cpp DepartmentSorter.h)